--- a/Dice/Base.lproj/Main.storyboard
+++ b/Dice/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
+    <device id="ipad12_9" orientation="portrait">
+        <adaptation id="splitview1_3"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -15,39 +15,93 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dice" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="4TY-G1-0bB">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="4TY-G1-0bB">
+                                <rect key="frame" x="-44" y="0.0" width="419" height="1366"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="q00-Be-GDK">
-                                <rect key="frame" x="27" y="54" width="322" height="190"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="cLw-gT-sAp">
-                                <rect key="frame" x="37" y="304" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="bwr-dr-Qi4">
-                                <rect key="frame" x="228" y="304" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aM2-xV-eqc">
-                                <rect key="frame" x="112" y="528" width="150" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.9220355308219178" green="0.0" blue="0.26324379280821919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
-                                <state key="normal" title="Roll">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b92-Rf-bDP"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="he4-oB-8eg">
+                                <rect key="frame" x="62.5" y="623" width="250" height="120"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="bwr-dr-Qi4">
+                                        <rect key="frame" x="130" y="0.0" width="120" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="120" id="7dv-ST-LIq"/>
+                                            <constraint firstAttribute="width" constant="120" id="uDk-yc-vii"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="cLw-gT-sAp">
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="bPu-PY-odR"/>
+                                            <constraint firstAttribute="height" constant="120" id="z7S-tT-5XL"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="cLw-gT-sAp" firstAttribute="top" secondItem="he4-oB-8eg" secondAttribute="top" id="2Fj-iB-Ycy"/>
+                                    <constraint firstAttribute="width" constant="250" id="MGh-71-7df"/>
+                                    <constraint firstItem="cLw-gT-sAp" firstAttribute="leading" secondItem="he4-oB-8eg" secondAttribute="leading" id="Nx0-9q-C0T"/>
+                                    <constraint firstAttribute="height" constant="120" id="PJ7-Rw-6So"/>
+                                    <constraint firstItem="bwr-dr-Qi4" firstAttribute="top" secondItem="he4-oB-8eg" secondAttribute="top" id="aoN-HV-LuF"/>
+                                    <constraint firstAttribute="trailing" secondItem="bwr-dr-Qi4" secondAttribute="trailing" id="fzG-lM-hbc"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="diX-jT-qeg">
+                                <rect key="frame" x="0.0" y="743" width="375" height="623"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aM2-xV-eqc">
+                                        <rect key="frame" x="127.5" y="286.5" width="120" height="50"/>
+                                        <color key="backgroundColor" red="0.9220355308219178" green="0.0" blue="0.26324379280821919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="d8e-SR-C3F"/>
+                                            <constraint firstAttribute="height" constant="50" id="vWw-d8-LCq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
+                                        <state key="normal" title="Roll">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b92-Rf-bDP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="aM2-xV-eqc" firstAttribute="centerY" secondItem="diX-jT-qeg" secondAttribute="centerY" id="2d8-H9-E3B"/>
+                                    <constraint firstItem="aM2-xV-eqc" firstAttribute="centerX" secondItem="diX-jT-qeg" secondAttribute="centerX" id="smC-25-Lya"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YyL-oJ-7Ue">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="q00-Be-GDK">
+                                        <rect key="frame" x="89.5" y="247.5" width="196.00000000000006" height="128"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="q00-Be-GDK" firstAttribute="centerX" secondItem="YyL-oJ-7Ue" secondAttribute="centerX" id="LRj-PG-3yM"/>
+                                    <constraint firstItem="q00-Be-GDK" firstAttribute="centerY" secondItem="YyL-oJ-7Ue" secondAttribute="centerY" id="QAf-Wb-8m5"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4TY-G1-0bB" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="DiT-27-8WY"/>
+                            <constraint firstItem="diX-jT-qeg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KnX-Qn-z5O"/>
+                            <constraint firstItem="diX-jT-qeg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="OVH-pt-iy4"/>
+                            <constraint firstItem="YyL-oJ-7Ue" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Psw-p9-BQT"/>
+                            <constraint firstItem="diX-jT-qeg" firstAttribute="top" secondItem="he4-oB-8eg" secondAttribute="bottom" id="Yiw-iV-JDK"/>
+                            <constraint firstItem="he4-oB-8eg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Yrd-dy-uPm"/>
+                            <constraint firstItem="4TY-G1-0bB" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="bEp-9S-XcQ"/>
+                            <constraint firstItem="he4-oB-8eg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hZq-AY-28i"/>
+                            <constraint firstItem="4TY-G1-0bB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jRT-V8-vIW"/>
+                            <constraint firstItem="diX-jT-qeg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="joe-1H-0y8"/>
+                            <constraint firstItem="he4-oB-8eg" firstAttribute="top" secondItem="YyL-oJ-7Ue" secondAttribute="bottom" id="pju-ez-GlU"/>
+                            <constraint firstItem="4TY-G1-0bB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-44" id="vDy-j1-Wu3"/>
+                            <constraint firstItem="YyL-oJ-7Ue" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="voQ-As-SDu"/>
+                            <constraint firstItem="YyL-oJ-7Ue" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="z2Q-sP-yAD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
